--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  font-family: "Inter";
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-panel {
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.36);
+  width: 50%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.panel-top {
+  display: flex;
+  justify-content: space-between;
+  padding: 0px 12px;
 }
 
-.card {
-  padding: 2em;
+.authors-panel {
+  padding: 12px;
 }
 
-.read-the-docs {
-  color: #888;
+.author-card {
+  height: 84px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #f4f5f6;
+}
+
+.author-img {
+  border-radius: 50%;
+  width: 48px;
+}
+
+.author-info {
+  flex-grow: 2;
+  padding-left: 30px;
+}
+
+.author-name {
+  font-size: 14px;
+  font-weight: 700;
+  margin: 10px 0px;
+  color: black;
+}
+
+.author-email {
+  font-size: 14px;
+  font-weight: 400;
+  margin: 10px 0px;
+  color: #4e616b;
+}
+
+.remove-btn {
+  width: 26px;
 }
